[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mi_py_dcm_aligner"
version = "0.3.1" # Ensure the version matches `App.VERSION` dynamically if needed
authors = [
    { name = "Michael Mueller", email = "michaelmuelleronline@gmx.de" }
]
description = "A tool for DICOM alignment" # Adjust this to match the actual description if needed
readme = "README.md"
license = { text = "Apache-2.0" } # Specify your license here if available
dynamic = ["dependencies"] # Changed
requires-python = ">=3.10"

[project.urls]
"Source Code" = "https://github.com/MichaelMueller/mi_py_dcm_aligner.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
# Dynamically loads dependencies from requirements.txt
dependencies = { file = ["requirements.txt"] }